<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_below="@id/common_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/common_header"
        layout="@layout/common_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:id="@+id/ll_top"
        >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/p20"
            android:layout_marginRight="@dimen/p20"
            android:background="@drawable/login_rounded_border"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="@dimen/p10"
            android:hint="@string/username"
            android:padding="@dimen/p5"
            android:singleLine="true"
            android:textSize="@dimen/ts16" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/p20"
            android:layout_marginRight="@dimen/p20"
            android:layout_marginTop="@dimen/p10"
            android:inputType="textEmailAddress"
            android:background="@drawable/login_rounded_border"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/p10"
            android:hint="@string/email"
            android:padding="@dimen/p5"
            android:singleLine="true"
            android:textSize="@dimen/ts16" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/p20"
            android:layout_marginRight="@dimen/p20"
            android:layout_marginTop="@dimen/p10"
            android:background="@drawable/login_rounded_border"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/p10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/p5"
            android:singleLine="true"
            android:textSize="@dimen/ts16" />
        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/p20"
            android:layout_marginRight="@dimen/p20"
            android:layout_marginTop="@dimen/p10"
            android:background="@drawable/login_rounded_border"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/p10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/p5"
            android:singleLine="true"
            android:textSize="@dimen/ts16" />

        <RadioGroup
            android:id="@+id/rg_user_type"
            android:layout_marginLeft="@dimen/p20"
            android:layout_marginRight="@dimen/p20"
            android:layout_marginTop="@dimen/p10"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:id="@+id/rb_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/rb_cleaner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cleaner"
                />
            <ImageView
                android:id="@+id/iv_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_help"
                android:layout_marginLeft="@dimen/p20"
                />

        </RadioGroup>

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/p40"
            android:layout_below="@id/et_password"
            android:layout_marginLeft="@dimen/p20"
            android:layout_marginRight="@dimen/p20"
            android:layout_marginTop="@dimen/p10"
            android:background="@drawable/rounded_border_button"
            android:text="@string/create_account"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:indeterminateTint="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:visibility="gone"
        />
</RelativeLayout>
