<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_below="@id/common_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/common_header"
        layout="@layout/common_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:id="@+id/ll_top"
        >

        <EditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/p20"
            android:layout_marginRight="@dimen/p20"
            android:layout_marginTop="@dimen/p10"
            android:inputType="textEmailAddress"
            android:background="@drawable/login_rounded_border"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/p10"
            android:hint="@string/enter_email"
            android:padding="@dimen/p5"
            android:singleLine="true"
            android:textSize="@dimen/ts16" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/p20"
            android:layout_marginRight="@dimen/p20"
            android:layout_marginTop="@dimen/p10"
            android:background="@drawable/login_rounded_border"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/p10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/p5"
            android:singleLine="true"
            android:textSize="@dimen/ts16"
            android:visibility="gone"
            />
        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/p20"
            android:layout_marginRight="@dimen/p20"
            android:layout_marginTop="@dimen/p10"
            android:background="@drawable/login_rounded_border"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="@dimen/p10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/p5"
            android:singleLine="true"
            android:textSize="@dimen/ts16"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/p40"
            android:layout_marginLeft="@dimen/p20"
            android:layout_marginRight="@dimen/p20"
            android:layout_marginTop="@dimen/p10"
            android:background="@drawable/rounded_border_button"
            android:text="@string/submit"
            android:textColor="@color/white"
            />
        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/p40"
            android:layout_marginLeft="@dimen/p20"
            android:layout_marginRight="@dimen/p20"
            android:layout_marginTop="@dimen/p10"
            android:background="@drawable/rounded_border_button"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:visibility="gone"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:indeterminateTint="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:visibility="gone"
        />
</RelativeLayout>
