<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <include
        android:id="@+id/common_header"
        layout="@layout/common_header" />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:visibility="gone"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    style="@style/FormLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/colorPrimary" />
                <EditText
                    android:id="@+id/et_choose_date"
                    style="@style/FormSpinners"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_straight_border"
                    android:singleLine="true"
                    android:hint="@string/please_select"
                    android:editable="false"
                    android:drawableRight="@drawable/ic_date"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/FormLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/property"
                    android:textColor="@color/colorPrimary" />
                <EditText
                    android:id="@+id/et_properties"
                    style="@style/FormSpinners"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_straight_border"
                    android:singleLine="true"
                    android:editable="false"
                    android:hint="@string/please_select"
                    android:drawableRight="@drawable/ic_dropdown"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/p10"
                >

                <TextView
                    style="@style/FormLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/property"
                    android:visibility="gone"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/btn_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/FormSpinners"
                    android:background="@color/colorPrimary"
                    android:text="@string/show"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    />
            </LinearLayout>

        </LinearLayout>
</LinearLayout>